# MRSS2025_Team1_TrashBot

./: README.md  dataset_download.py  inference_ncnn.sh  inference_ncnn_simple.py  lr_finder.py  ncnn_simple_export.py
cpp failed attempt/: README_old.md  inference_ncnn.sh
cpp failed attempt/ncnn_test/: best-opt.param  best.param  compile.sh  main.cpp  trash-classes.txt
cpp failed attempt/ncnn_test/best_ncnn_model/: metadata.yaml
data/oceantrash_dataset/: README.dataset.txt  README.roboflow.txt
data/utd2-7/: data.yaml
data/utd2-7/train/: labels.cache
data/utd2-7/valid/: labels.cache
models/yolov11n_trash_detection/: args.yaml  results.csv
models/yolov11n_trash_detection/weights/: best-opt.param  best.param
models/yolov11n_trash_detection/weights/best_ncnn_model/: metadata.yaml
models/yolov11n_trash_detection/weights/best_ncnn_opt_model/: model_ncnn.py
ncnn_test/: CMakeLists.txt  main.cpp  ncnn_export.py
ncnn_test/best_ncnn_model/: model.ncnn.param  model_ncnn.py
yolov11n/: inference.py  train.py  train_autoresume.py
